created and added toolbar to MainActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,9 @@
         android:orientation="vertical">
 
         <!--The ToolBar/AppBar:-->
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
 
         <!--The main content frame:-->
         <FrameLayout
