incorporated header and menu into navView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,9 @@
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start">
-        <!--app:menu="@menu/navigationView_Menu"-->
-        <!--app:headerLayout="@layout/navigationView_HeaderLayout" >-->
+        android:layout_gravity="start"
+        app:menu="@menu/nav_menu"
+        app:headerLayout="@layout/nav_header" >
 
         <!--    If we're providing menu items from a list, we would place it here
                     so that we can wrap it in the NavigationView.
